@@ -5,6 +5,7 @@
 
 #include <string>
 #include <tightdb.hpp>
+#include <tightdb/version.hpp>
 #import  <tightdb/objc/version.h>
 
 @implementation TightdbVersion
@@ -13,23 +14,51 @@
 
 -(id)init
 {
-  self = [super init];
-  return self;
+    self = [super init];
+    return self;
 }
 
 +(const int)getMajor
 {
-  return Tightdb_Version_Major;
+    return Tightdb_Version_Major;
 }
 
 +(const int)getMinor
 {
-  return Tightdb_Version_Minor;
+    return Tightdb_Version_Minor;
 }
 
 +(const int)getPatch
 {
-  return Tightdb_Version_Patch;
+    return Tightdb_Version_Patch;
 }
 
++(BOOL)isAtLeast:(int)major minor:(int)minor patch:(int)patch
+{
+    if (major < Tightdb_Version_Major)
+        return NO;
+    if (minor < Tightdb_Version_Minor)
+        return NO;
+    if (patch < Tightdb_Version_Patch)
+        return NO;
+    return YES;
+}
+
++(NSString*)getVersion
+{
+    NSString *s = [NSString stringWithFormat:@"%d.%d.%d", 
+                            [TightdbVersion getMajor], 
+                            [TightdbVersion getMinor],
+                            [TightdbVersion getPatch]];
+    return s;
+}
+
++(NSString*)getCoreVersion
+{
+    NSString *s = [NSString stringWithFormat:@"%d.%d.%d",
+                            tightdb::Version::get_major(),
+                            tightdb::Version::get_minor(),
+                            tightdb::Version::get_patch()];
+    return s;
+}
 @end
